--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,6 +5,11 @@ permalink: /publications/
 author_profile: true
 ---
 
+# DETH: ADDED TO CENTER NATURE COVER IMAGE
+<head>
+  <link rel="stylesheet" href="publications.css">
+</head>
+
 {% if site.author.googlescholar %}
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
